--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <a href="">0765432122</a>
             <br>
             <label>Email Us:</label>
-            <a href="mailto:grace.kingori2021@strathmore.edu">grace.kingori2021@strathmore.edu</a>
+            <a href="mailto:Rita.Ireriori2021@strathmore.edu">Rita.Ireriori2021@strathmore.edu</a>
             <br>
                </div>
             </div>
@@ -369,7 +369,7 @@
                                      0765432122
                                  </li>
                                  <li><i class="fa fa-envelope" aria-hidden="true"></i>
-                                    <a href="mailto:grace.kingori2021@strathmore.edu" style="font-size: 12px;">grace.kingori2021@strathmore.edu</a>
+                                    <a href="mailto:Rita.Ireriori2021@strathmore.edu" style="font-size: 12px;">Rita.Ireriori2021@strathmore.edu</a>
                                  </li>
                               </ul>
                            </div>
@@ -381,7 +381,7 @@
                <div class="container">
                   <div class="row d_flex">
                      <div class="col-md-8">
-                        <p>© 2022 All Rights Reserved. Design by Grace King’ori 145414.</p>
+                        <p>© 2022 All Rights Reserved. Design by Rita Ireri’ori 145414.</p>
                      </div>
                   </div>
                </div>
