--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <a href="">0765432122</a>
             <br>
             <label>Email Us:</label>
-            <a href="mailto:Rita.Ireriori2021@strathmore.edu">Rita.Ireriori2021@strathmore.edu</a>
+            <a href="mailto:Rita.Ireri2021@strathmore.edu">Rita.Ireri2021@strathmore.edu</a>
             <br>
                </div>
             </div>
@@ -369,7 +369,7 @@
                                      0765432122
                                  </li>
                                  <li><i class="fa fa-envelope" aria-hidden="true"></i>
-                                    <a href="mailto:Rita.Ireriori2021@strathmore.edu" style="font-size: 12px;">Rita.Ireriori2021@strathmore.edu</a>
+                                    <a href="mailto:Rita.Ireri2021@strathmore.edu" style="font-size: 12px;">Rita.Ireri2021@strathmore.edu</a>
                                  </li>
                               </ul>
                            </div>
