--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                <div class="container">
                   <div class="row d_flex">
                      <div class="col-md-8">
-                        <p>© 2022 All Rights Reserved. Design by Rita Ireri’ori 145414.</p>
+                        <p>© 2022 All Rights Reserved. Design by Rita Ireri 145900.</p>
                      </div>
                   </div>
                </div>
