--- a/login.html
+++ b/login.html
@@ -130,7 +130,7 @@
                              <input class="input-group-password" type="checkbox" onclick="myFunction1()">Show Password                         
                         </div>
                         <div class="col-md-12">
-                        <p>Want to be An Area Administrator ? Email <a href="mailto:grace.kingori2021@strathmore.edu">HERE</a>. </p>
+                        <p>Want to be An Area Administrator ? Email <a href="mailto:Rita.Ireri2021@strathmore.edu">HERE</a>. </p>
                         <p>Forgot Password ? Click <a href="recover_u_a.php">HERE</a>.</p>
                       </div>
                       <br>
@@ -164,7 +164,7 @@
                              <input class="input-group-password" type="checkbox" onclick="myFunction2()">Show Password                         
                         </div>
                         <div class="col-md-12">
-                        <p>Want to be A System Administrator ? Email <a href="mailto:grace.kingori2021@strathmore.edu">HERE</a>. </p>
+                        <p>Want to be A System Administrator ? Email <a href="mailto:Rita.Ireri2021@strathmore.edu">HERE</a>. </p>
                       </div>
                       <br>
                         <br>
@@ -212,7 +212,7 @@
                                      0765432122
                                  </li>
                                  <li><i class="fa fa-envelope" aria-hidden="true"></i>
-                                    <a href="mailto:grace.kingori2021@strathmore.edu" style="font-size: 12px;">grace.kingori2021@strathmore.edu</a>
+                                    <a href="mailto:Rita.Ireri2021@strathmore.edu" style="font-size: 12px;">Rita.kingori2021@strathmore.edu</a>
                                  </li>
                               </ul>
                            </div>
@@ -224,7 +224,7 @@
                <div class="container">
                   <div class="row d_flex">
                      <div class="col-md-8">
-                        <p>© 2022 All Rights Reserved. Design by Grace King’ori 145414.</p>
+                        <p>© 2022 All Rights Reserved. Design by Rita Ireri 145900.</p>
                      </div>
                   </div>
                </div>
