--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <a href="">0765432122</a>
             <br>
             <label>Email Us:</label>
-            <a href="mailto:Rita.Ireri2021@strathmore.edu">Rita.Ireri2021@strathmore.edu</a>
+            <a href="mailto:rita.Ireri2021@strathmore.edu">rita.Ireri2021@strathmore.edu</a>
             <br>
                </div>
             </div>
