--- a/login.html
+++ b/login.html
@@ -212,7 +212,7 @@
                                      0765432122
                                  </li>
                                  <li><i class="fa fa-envelope" aria-hidden="true"></i>
-                                    <a href="mailto:Rita.Ireri2021@strathmore.edu" style="font-size: 12px;">Rita.kingori2021@strathmore.edu</a>
+                                    <a href="mailto:rita.Ireri2021@strathmore.edu" style="font-size: 12px;">rita.ireri2021@strathmore.edu</a>
                                  </li>
                               </ul>
                            </div>
